--- a/src/chat/_messages.scss
+++ b/src/chat/_messages.scss
@@ -704,7 +704,7 @@
 	.backgroundFlash-24qWLN {
 		transition: 150ms ease;
 		background: rgba(var(--accent), 0.2) !important;
-		&[style*="rgba(114, 137, 218, 0)"] {
+		&[style*="rgba(88, 101, 242, 0)"] {
 			background: transparent !important;
 		}
 	}
